# piper-tts-android

./: .gitignore  .gitmodules  README.md  _rewrite_test.py  build-apk.sh  fix-wrapper.sh  gen-wrapper.sh  gen-wrapper2.sh  gen_expanded.py  gen_expanded_test.py  gen_roundtrip.py  gen_test.py  generate_test.py  push-to-github.sh  roundtrip_gen.py  settings.gradle.kts  test_texts.txt  texts_en.txt  write_expanded_test.py  write_roundtrip.py  write_test.py
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/aitorpazos/pipertts/: TtsEngineRegistrationTest.kt  TtsSpeechRoundtripTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
app/src/main/java/com/aitorpazos/pipertts/: PiperTtsApplication.kt
app/src/main/java/com/aitorpazos/pipertts/download/: VoiceDownloadManager.kt
app/src/main/java/com/aitorpazos/pipertts/engine/: EspeakNative.kt  PhonemeConverter.kt  PiperEngine.kt
app/src/main/java/com/aitorpazos/pipertts/model/: PiperVoiceConfig.kt
app/src/main/java/com/aitorpazos/pipertts/ui/: CheckVoiceData.kt  (+6 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_tts_settings.xml  activity_voice_list.xml  item_voice.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  tts_engine.xml
app/src/test/java/com/aitorpazos/pipertts/: PhonemeConverterTest.kt  PiperTtsServiceTest.kt  PiperVoiceConfigTest.kt  TtsSpeechRoundtripTest.kt
keystores/: debug.keystore
(+4 files in other folders)
